versioned_docs/version-1.0.2/configuration/pipelines/processors/final.mdx
---
description: Terminates a pipeline
sidebar_custom_props: 
  customIcon: 🏁
  customCategory: Control Flow
---

# Final

<span className="theme-doc-version-badge badge badge--primary">Control Flow</span><span className="theme-doc-version-badge badge badge--secondary">Cribl Compatible</span>

## Synopsis

Terminates the processing of a pipeline gracefully without raising errors.

## Schema

```yaml
- final:
    description: <text>
    if: <script>
    ignore_failure: <boolean>
    on_failure: <processor[]>
    on_success: <processor[]>
    tag: <string>
```

## Configuration

The following fields are used to define the processor:

|Field|Required|Default|Description|
|---|---|---|---|
|`description`|N|-|Explanatory note for documentation|
|`if`|N|-|Condition determining when to finalize processing|
|`ignore_failure`|N|`false`|If `true`, condition evaluation errors are ignored|
|`on_failure`|N|-|See <Topic id="handling-failures">Handling Failures</Topic>|
|`on_success`|N|-|See <Topic id="handling-success">Handling Success</Topic>|
|`tag`|N|-|Identifier for the finalization point|

## Details

This processor is particularly useful for creating breakpoints, implementing conditional termination, optimizing execution by early termination, and preventing further pipelines from running.

Typical uses:

* **Early Exit on Success**

  ```yaml
  - append:
      field: tags
      value: processed
  - final:
      if: "ctx.tags.contains('processed')"
   ```

* **Prevent Duplicate Processing**

  ```yaml
  - set:
      field: processed_by
      value: pipeline_a
  - final:
      description: "Prevent other pipelines from processing"
   ```

* **Conditional Pipeline Branch**
 
  ```yaml
  - final:
      if: "ctx.environment == 'production'"
      description: "Skip test processors in production"
  - set:
      field: test_field
      value: test_value
   ```

It is good practice to use detailed description to document the finalization points. Also, consider adding cleanup tasks using `on_success`, test conditional finalization thoroughly, and use tags for tracking finalization points in logs.

:::warning
Once `final` is used, no further processors in any pipeline will execute. Use with caution in multi-pipeline setups, and consider using `if` to prevent unintended early termination.
:::

## Examples

### Basic

<ExampleGrid>
  <CommentCol>
    Stopping processing after the field update...
  </CommentCol>
  <CodeCol>
    ```yaml
    - set:
        field: status
        value: completed
    - final:
        description: "Stop after status update"
    - set:  # This processor won't run
        field: other_field
        value: skipped
    ```
  </CodeCol>
  <CommentCol>
    prevents further processing:
  </CommentCol>
  <CodeCol>
    ```json
    {
      "status": "completed"
    }
    ```
  </CodeCol>
</ExampleGrid>

### Conditionals

<ExampleGrid>
  <CommentCol>
    Finalizing based on packet count...
  </CommentCol>
  <CodeCol>
    ```json
    {
      "source": {
        "packets": 10
      }
    }
    ```
    ```yaml
    - final:
        if: "ctx.source.packets == 10"
        description: "Stop processing for 10-packet sources"
    ```
  </CodeCol>
  <CommentCol>
    stops the process when the condition is met:
  </CommentCol>
  <CodeCol>
    ```text
    Pipeline processing finalized
    ```
  </CodeCol>
</ExampleGrid>

### Success

<ExampleGrid>
  <CommentCol>
    Executing cleanup on finalization...
  </CommentCol>
  <CodeCol>
    ```yaml
    - final:
        description: "Clean finalization"
        on_success:
          - set:
              field: processing_status
              value: completed
          - remove:
              field: temporary_data
    ```
  </CodeCol>
  <CommentCol>
    terminates the pipeline gracefully:
  </CommentCol>
  <CodeCol>
    ```json
    {
      "processing_status": "completed"
    }
    ```
  </CodeCol>
</ExampleGrid>
