versioned_docs/version-1.5.1/configuration/pipelines/processors/final.mdx
---
description: Terminates a pipeline
sidebar_custom_props: 
  customIcon: 🏁
  customCategory: Flow Control
---

# Final

<span className="theme-doc-version-badge badge badge--primary">Control Flow</span><span className="theme-doc-version-badge badge badge--secondary">Pipeline</span>

## Synopsis

Completes all pipeline processing for the current event, indicating that the data is finalized and no further processing is needed.

## Schema

```yaml
- final:
    description: <text>
    if: <script>
    ignore_failure: <boolean>
    on_failure: <processor[]>
    on_success: <processor[]>
    tag: <string>
```

## Configuration

The following fields are used to define the processor:

|Field|Required|Default|Description|
|---|---|---|---|
|`description`|N|-|Explanatory note for documentation|
|`if`|N|-|Condition determining when to finalize processing|
|`ignore_failure`|N|`false`|If `true`, condition evaluation errors are ignored|
|`on_failure`|N|-|See <Topic id="handling-failures">Handling Failures</Topic>|
|`on_success`|N|-|See <Topic id="handling-success">Handling Success</Topic>|
|`tag`|N|-|Identifier for the finalization point|

## Details

The `final` processor marks the event as complete and stops all further pipeline processing. It signals that the data has reached its final state and requires no additional transformation or enrichment.

**Key Characteristics:**
- Stops all subsequent processors in the current pipeline
- Prevents execution of any additional pipelines configured for the event
- The event continues to its configured destinations with its current state
- Useful for creating explicit completion points in complex pipeline flows

The processor executes any `on_success` handlers before finalizing, allowing for cleanup operations, logging, or final metadata updates.

Typical uses:

* **Early Exit on Success**

  ```yaml
  - append:
      field: tags
      value: processed
  - final:
      if: "ctx.tags.contains('processed')"
   ```

* **Prevent Duplicate Processing**

  ```yaml
  - set:
      field: processed_by
      value: pipeline_a
  - final:
      description: "Prevent other pipelines from processing"
   ```

* **Conditional Pipeline Branch**
 
  ```yaml
  - final:
      if: "ctx.environment == 'production'"
      description: "Skip test processors in production"
  - set:
      field: test_field
      value: test_value
   ```

:::note Final vs Return vs Continue
All these processors control pipeline flow: `final` stops all pipeline processing, <Topic id="return">`return`</Topic> exits the current block, and <Topic id="continue">`continue`</Topic> skips to the next iteration. Use `final` for graceful pipeline termination with clear semantic intent.
:::

It is good practice to use detailed description to document the finalization points. Also, consider adding cleanup tasks using `on_success`, test conditional finalization thoroughly, and use tags for tracking finalization points in logs.

:::warning
Once `final` is used, no further processors in any pipeline will execute. The event will be sent to its configured destinations with its current state. Use with caution in multi-pipeline setups, and consider using `if` to prevent unintended early termination.
:::

## Examples

### Basic

<ExampleGrid>
  <CommentCol>
    Stopping processing after the field update...
  </CommentCol>
  <CodeCol>
    ```yaml
    - set:
        field: status
        value: completed
    - final:
        description: "Stop after status update"
    - set:  # This processor won't run
        field: other_field
        value: skipped
    ```
  </CodeCol>
  <CommentCol>
    prevents further processing:
  </CommentCol>
  <CodeCol>
    ```json
    {
      "status": "completed"
    }
    ```
  </CodeCol>
</ExampleGrid>

### Conditionals

<ExampleGrid>
  <CommentCol>
    Finalizing based on packet count...
  </CommentCol>
  <CodeCol>
    ```json
    {
      "source": {
        "packets": 10
      }
    }
    ```
    ```yaml
    - final:
        if: "ctx.source.packets == 10"
        description: "Stop processing for 10-packet sources"
    ```
  </CodeCol>
  <CommentCol>
    stops the process when the condition is met:
  </CommentCol>
  <CodeCol>
    ```text
    Pipeline processing finalized
    ```
  </CodeCol>
</ExampleGrid>

### Success

<ExampleGrid>
  <CommentCol>
    Executing cleanup on finalization...
  </CommentCol>
  <CodeCol>
    ```yaml
    - final:
        description: "Clean finalization"
        on_success:
          - set:
              field: processing_status
              value: completed
          - remove:
              field: temporary_data
    ```
  </CodeCol>
  <CommentCol>
    terminates the pipeline gracefully:
  </CommentCol>
  <CodeCol>
    ```json
    {
      "processing_status": "completed"
    }
    ```
  </CodeCol>
</ExampleGrid>
